[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/server",
    "crates/client",
]
default-members = ["."]

[package]
name = "godot-netlink"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/godot-netlink"
authors = ["GodotNetLink Contributors"]

[dependencies]
godot-netlink-protocol = { path = "crates/protocol" }
godot-netlink-server = { path = "crates/server" }
godot-netlink-client = { path = "crates/client" }
tokio = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/godot-netlink"
authors = ["GodotNetLink Contributors"]

[workspace.dependencies]
bytes = "1.5"
thiserror = "1.0"
bitflags = "2.4"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net"] }
tokio-tungstenite = "0.21"
futures = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
