[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/server",
    "crates/client",
    "crates/protocol-derive",
    "crates/simulation",
]
default-members = ["."]

[package]
name = "godot-netlink"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/godot-netlink"
authors = ["GodotNetLink Contributors"]

[dependencies]
godot-netlink-protocol = { path = "crates/protocol" }
godot-netlink-server = { path = "crates/server" }
godot-netlink-client = { path = "crates/client" }
godot-netlink-simulation = { path = "crates/simulation" }
tokio = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
godot-netlink-protocol-derive = { path = "crates/protocol-derive" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/godot-netlink"
authors = ["GodotNetLink Contributors"]

[workspace.dependencies]
bytes = "1.5"
thiserror = "1.0"
bitflags = "2.4"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net"] }
tokio-tungstenite = "0.21"
futures = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
zstd = "0.13"
lz4 = "1.24"
chacha20poly1305 = "0.10"
