[package]
name = "godot-netlink-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
godot-netlink-protocol = { path = "../protocol" }
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
