[package]
name = "mokosh-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["api-4-6"] }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
mokosh-protocol = { path = "../protocol" }
mokosh-client = { path = "../client" }
mokosh-server = { path = "../server" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
