[package]
name = "godot-netlink-protocol-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
godot-netlink-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
