[package]
name = "mokosh-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bytes.workspace = true
thiserror.workspace = true
bitflags.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
postcard.workspace = true
uuid = { workspace = true }
chacha20poly1305.workspace = true
zstd.workspace = true
lz4.workspace = true

[dev-dependencies]
