[package]
name = "mokosh-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
compression = ["zstd", "lz4"]
native = ["compression", "tokio"]
wasm = []

[dependencies]
bytes.workspace = true
thiserror.workspace = true
bitflags.workspace = true
async-trait.workspace = true
tokio = { workspace = true, optional = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
postcard.workspace = true
uuid = { workspace = true }
getrandom = { workspace = true }
chacha20poly1305.workspace = true
zstd = { workspace = true, optional = true }
lz4 = { workspace = true, optional = true }

[dev-dependencies]
