[package]
name = "godot-netlink-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
godot-netlink-protocol = { path = "../protocol" }
godot-netlink-client = { path = "../client" }
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
