[package]
name = "mokosh-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mokosh-protocol = { path = "../protocol" }
mokosh-client = { path = "../client" }
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
