[package]
name = "mokosh-simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mokosh-protocol = { path = "../protocol" }
mokosh-protocol-derive = { path = "../protocol-derive" }
serde = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
