[package]
name = "bevy-platformer-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "client_wasm.rs"

[dependencies]
mokosh-protocol = { path = "../../crates/protocol", default-features = false }
mokosh-client = { path = "../../crates/client", default-features = false, features = ["wasm"] }
mokosh-simulation = { path = "../../crates/simulation" }
mokosh-protocol-derive = { path = "../../crates/protocol-derive" }
bevy = { version = "0.18", default-features = false, features = ["bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "default_font", "png", "webgl2"] }
tokio = { version = "1.42", default-features = false, features = ["sync", "macros"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
